2005-09-18  Pablo Arroyo  <zioma@linups.org>

	* src/buoh-properties-dialog.c: Added thumbnail to the properties
	dialog.
	* src/buoh-view-comic.c: Changed the zoom scaling factor,
	and max and min zoom values. 

2005-09-17  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-properties-dialog.c: Fix build problem (sorry!)

2005-09-17  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-manager.c: Better code for freeing the comic list.

	* src/buoh-comic.c: Better code for object construction on new_with_info
	
	* src/buoh-window.c: Sensitive of GoPrevious, GoNext, GoLast and
	GoFirst actions. The sensitive is different in the
	STATE_MESSAGE_ERROR.
	
	* src/buoh-properties-dialog.c: Added the "Date of publication"
	property. Fixed some translation strings.
	
	* data/comics.xml: Some comics added. Martinmorales removed (it's
	just an image, the joke is in the web page).
	
2005-09-17  Pablo Arroyo <zioma@linups.org>

	* data/buoh-ui.xml:
	* src/buoh-window.c: Added the comic view popup menu.

2005-09-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-properties-dialog.[ch]: get_comic_manager method added

	* src/buoh-window.c: Allow more than one properties dialog, one for
	each comic manager in the list

2005-09-15 Pablo Arroyo <zioma@linups.org>

	* src/buoh-window.c: Fix crash when deleting a comic list item

2005-09-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/Makefile.am: s/buoh.glade/buoh-ui.xml/
	* data/buoh.glade: Removed
	* data/buoh-ui.xml: Added
	Remove glade file and use the xml file needed for building the ui with
	GtkUIManager

	* src/buoh-view-comic.c:
	* src/buoh-view-message.c:
	Set view-comic and view-message widgets as focusables

	* src/buoh-view.c: Grab focus into view-comic or view-message when the
	view receive the focus depending on the view status. Get the focus
	when receive a button press event

	* src/buoh-window.c: Remove all glade dependecies and use GtkUIManager
	to build the ui.
	